--- a/lib/twitter_web/controllers/page_html/home.html.heex
+++ b/lib/twitter_web/controllers/page_html/home.html.heex
@@ -1,3 +1,2 @@
 <.flash_group flash={@flash} />
-<.navbar_link href={~p"/users/register"} text="Register" />
-<.navbar_link href={~p"/users/log_in"} text="Log in" />
+<h1>Hello World</h1>
