change home page

--- a/lib/twitter_web/controllers/page_html/home.html.heex
+++ b/lib/twitter_web/controllers/page_html/home.html.heex
@@ -1,2 +1,7 @@
 <.flash_group flash={@flash} />
-<h1>Hello World</h1>
+
+<%= for cate <- @cates do %>
+    <li>
+      <.link href={~p"/#{cate.name}"}><%= cate.name %></.link>
+    </li>
+<% end %>
