show post number in each category

--- a/lib/twitter_web/controllers/page_html/home.html.heex
+++ b/lib/twitter_web/controllers/page_html/home.html.heex
@@ -4,4 +4,5 @@
     <li>
       <.link href={~p"/#{cate.name}"}><%= cate.name %></.link>
     </li>
+    <p>Total posts:<%= length(cate |> Ecto.assoc(:posts) |> Twitter.Repo.all) %></p>
 <% end %>
