初步显示头像

--- a/lib/twitter_web/live/profile_live.html.heex
+++ b/lib/twitter_web/live/profile_live.html.heex
@@ -2,7 +2,7 @@
 
   <div class="flex items-center">
 
-    <%!-- <%= img_tag ~p"/images/default_avatar.png", class: "h-20 w-20 rounded", alt: "Avatar" %> --%>
+    <%= img_tag ~p"/images/default_avatar.png", class: "h-20 w-20 rounded", alt: "Avatar" %>
 
     <div class="ml-6">
 
