--- a/lib/twitter_web/live/profile_live.html.heex
+++ b/lib/twitter_web/live/profile_live.html.heex
@@ -10,7 +10,7 @@
 
       <p class="mt-1 text-gray-400">Member since <%= Calendar.strftime(@user.inserted_at, "%m/%d/%Y") %></p>
 
-      <p class="mt-1 text-gray-500">0 tweeks</p>
+      <p class="mt-1 text-gray-500"><%= length(@posts) %> posts</p>
 
     </div>
 
@@ -18,15 +18,18 @@
 
 </div>
 
+<%= if @posts == nil do %>
+  <div class="mt-3">
 
-<div class="mt-3">
+    <div class="text-center py-10">
 
-  <div class="text-center py-10">
+      <h2 class="text-gray-500 text-2xl">Nothing to see!</h2>
 
-    <h2 class="text-gray-500 text-2xl">Nothing to see!</h2>
+      <p class="text-gray-400">This user hasn't posted any posts yet</p>
 
-    <p class="text-gray-400">This user hasn't posted any tweeks yet</p>
+    </div>
 
   </div>
-
-</div>
+<% else %>
+<p class="mt-1 text-gray-500"><%= length(@posts) %> posts</p>
+<% end %>
