--- a/lib/twitter_web/live/profile_live.html.heex
+++ b/lib/twitter_web/live/profile_live.html.heex
@@ -37,6 +37,7 @@
         <div class="flex items-center">
           <div class="ml-3">
             <h2 class="font-bold text-lg">@<%= @user.username %></h2>
+            <p class="text-gray-400 ml-2"><%= TwitterWeb.CategoryLive.post_inserted_at(post) %></p>
           </div>
         </div>
       </div>
