--- a/lib/twitter_web/live/profile_live.html.heex
+++ b/lib/twitter_web/live/profile_live.html.heex
@@ -38,6 +38,7 @@
           <div class="ml-3">
             <h2 class="font-bold text-lg">@<%= @user.username %></h2>
             <p class="text-gray-400 ml-2"><%= TwitterWeb.CategoryLive.post_inserted_at(post) %></p>
+            <h2 class="font-bold text-lg"><%= post.title %></h2>
           </div>
         </div>
       </div>
